--- a/AppMAUI/AppMAUI.csproj
+++ b/AppMAUI/AppMAUI.csproj
@@ -67,6 +67,9 @@
 	  <MauiXaml Update="AnimalPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="ClientPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="ProductPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
