--- a/AppMAUI/AppMAUI.csproj
+++ b/AppMAUI/AppMAUI.csproj
@@ -71,6 +71,9 @@
 	  <MauiXaml Update="ClientPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="LoginPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="ProductPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
